--- a/_config.yml
+++ b/_config.yml
@@ -101,10 +101,10 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      # url: "sumgarg@iu.edu"
+      url: "sumgarg@iu.edu"
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      # url: "https://sumanyu-21/sumanyu-21.github.io"
+      url: "https://sumanyu-21/sumanyu-21.github.io"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
@@ -113,7 +113,7 @@ author:
       # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url: "https://github.com/sumanyu-21"
+      url: "https://github.com/sumanyu-21"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
@@ -288,7 +288,7 @@ defaults:
       layout: single
       author_profile: true
       read_time: #true
-      comments: true
+      comments: #true
       share: true
       related: #true
 
