--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ title_separator          : "-"
 subtitle                 : "AI Researcher"
 name                     : "Sumanyu Garg"
 description              : "My Artificial Intelligence Portfolio."
-url                      : "https://sumanyu-21.github.io"
+url                      : #"https://sumanyu-21.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "sumanyu-21/sumanyu-21.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
