--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ name                     : "Sumanyu Garg"
 description              : "My Artificial Intelligence Portfolio."
 url                      : #"https://sumanyu-21.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : "sumanyu-21/sumanyu-21.github.io"
+repository               : #"sumanyu-21/sumanyu-21.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
