--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ title_separator          : "-"
 subtitle                 : "AI Researcher"
 name                     : "Sumanyu Garg"
 description              : "My Artificial Intelligence Portfolio."
-url                      : "https://sumanyu-21.github.io"
+url                      : #"https://sumanyu-21.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : "sumanyu-21/sumanyu-21.github.io"
+repository               : #"sumanyu-21/sumanyu-21.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
@@ -94,7 +94,7 @@ analytics:
 # Site Author
 author:
   name             : "Sumanyu Garg"
-  avatar           : "/Images/AI.jpg"
+  avatar           : #"/Images/AI.jpg"
   bio              : "Looking for Full Time Opportunities in Machine Learning/Deep Learning/ Reinforcement Learning."
   location         : "San Jose, CA"
   email            : "sumgarg@iu.edu"
