--- a/_config.yml
+++ b/_config.yml
@@ -94,10 +94,10 @@ analytics:
 # Site Author
 author:
   name             : "Sumanyu Garg"
-  avatar           : #"/Images/AI.jpg"
+  avatar           : "/Images/AI.jpg"
   bio              : "Looking for Full Time Opportunities in Machine Learning/Deep Learning/ Reinforcement Learning."
   location         : "San Jose, CA"
-  email            : "sumgarg@iu.edu"
+  email            : #"sumgarg@iu.edu"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
