--- a/_config.yml
+++ b/_config.yml
@@ -97,14 +97,14 @@ author:
   avatar           : "/Images/AI.jpg"
   bio              : "Looking for Full Time Opportunities in Machine Learning/Deep Learning/ Reinforcement Learning."
   location         : "San Jose, CA"
-  email            : #"sumgarg@iu.edu"
+  email            : "sumgarg@iu.edu"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: "sumgarg@iu.edu"
+      url: #"sumgarg@iu.edu"
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      url: "https://sumanyu-21/sumanyu-21.github.io"
+      url: "https://sumanyu-21.github.io"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
