--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ analytics:
 author:
   name             : "Sumanyu Garg"
   avatar           : "/Images/AI.jpg"
-  bio              : "Looking for Full Time Opportunities in Machine Learning/Deep Learning/ Reinforcement Learning."
+  bio              : "Machine Learning Portfolio"
   location         : "San Jose, CA"
   email            : "sumgarg@iu.edu"
   links:
