--- a/_config.yml
+++ b/_config.yml
@@ -277,6 +277,7 @@ defaults:
       type: posts
     values:
       layout: single
+      classes: wide
       author_profile: true
       read_time: true
       comments: true
@@ -289,6 +290,7 @@ defaults:
       type: pages
     values:
       layout: single
+      classes: wide
       author_profile: true
      
 
