--- a/_config.yml
+++ b/_config.yml
@@ -278,7 +278,7 @@ defaults:
     values:
       layout: single
       classes: wide
-      author_profile: true
+      author_profile: false
       read_time: true
       comments: true
       share: true
