--- a/_config.yml
+++ b/_config.yml
@@ -277,7 +277,7 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: true
+      #author_profile: true
       class: wide
       read_time: true
       comments: true
@@ -290,6 +290,7 @@ defaults:
       type: pages
     values:
       layout: single
+      class: wide
       author_profile: true
      
 
