--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title                    : "Home"
 title_separator          : "-"
 subtitle                 : ""
 name                     : "Sumanyu Garg"
-description              : #""
+description              : "Artifical Intelligence Related Stuff"
 url                      : "https://sumanyu-21.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : #"sumanyu-21/sumanyu-21.github.io"
