--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,8 @@ main:
     url: /About/
   - title: "Blogs"
     url: /Blogs/
+  - title: "Resume"
+    url: /Resume/
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
