--- a/_config.yml
+++ b/_config.yml
@@ -29,16 +29,16 @@ masthead_title           : "" # overrides the website title displayed in the mas
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
-  provider               : "facebook" # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "custom"
+  provider               : #"facebook" # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "custom"
   disqus:
     shortname            : # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
   discourse:
     server               : # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
   facebook:
-                          https://developers.facebook.com/docs/plugins/comments
+                          #https://developers.facebook.com/docs/plugins/comments
     appid                :
-    num_posts            : 20 (default)
-    colorscheme          : "light" #(default), "dark"
+    num_posts            : #20 (default)
+    colorscheme          : #"light" #(default), "dark"
   utterances:
     theme                : # "github-light" (default), "github-dark"
     issue_term           : # "pathname" (default)
