--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
 main:
   - title: "About"
     url: /About/
-  - title: "Blogs"
-    url: /Blogs/
+  - title: "Posts"
+    url: /Posts/
   - title: "Resume"
     url: /Resume/
   # - title: "Sample Posts"
