--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,8 @@ main:
     url: /About/
   - title: "Posts"
     url: /Posts/
-  - title: "Resume"
-    url: /Resume/
+  - #title: "Resume"
+    #url: /Resume/
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
